Bug#58561: Server Crash with correlated subquery and MyISAM tables            when semijoin=on

The problem here is that the variable 'sargables' contains invalid data
after call to update_ref_and_keys(), causing a segmentation fault.
Further inspection showed that the number of conditions was calculated
erroneously, and it was also noticed that it was because
thd->lex->current_select was not equal to select_lex passed as argument.
The culprit was found to be subselect_single_select_engine::exec()
that did not restore the value of 'current_select' after an engine
was changed.

Problem is fixed by restoring current_select properly.
We also clean up the code slightly by replacing
thd->lex->current_select in update_ref_and_keys()
with the passed select_lex argument.

mysql-test/include/subquery.inc
  Added test case for bug#58561.

mysql-test/r/subquery_all.result
mysql-test/r/subquery_all_jcl6.result
mysql-test/r/subquery_nomat_nosj.result
mysql-test/r/subquery_nomat_nosj_jcl6.result
mysql-test/r/subquery_none.result
mysql-test/r/subquery_none_jcl6.result
  Added test results for bug#58561.

sql/item_subselect.cc
  In subselect_single_select_engine::exec(), restored saved
  'current_select' when an engine is changed.
  Implemented 'clean exit' policy as a code cleanup fix.

sql/sql_select.cc
  In update_ref_and_keys(), replaced reference to
  thd->lex->current_select with the select_lex passed as argument.
  This is a code cleanup fix.